# recommender-system-ml

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
conf/base/: catalog.yml  parameters.yml
data/02_intermediate/: genre_column_list.csv  genre_column_list.pkl  preprocessed_movies.csv  preprocessed_movies.parquet  user_timelines.csv  user_timelines.parquet  user_timelines_test.csv  user_timelines_train.csv
data/08_reporting/: kfold_results.csv
notebooks/: eda.ipynb
src/recommender_ml/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/recommender_ml/modules/: Model.py  ModelExport.py  ModelProd.py  training_utils.py
src/recommender_ml/pipelines/export_model/: nodes.py  pipeline.py
src/recommender_ml/pipelines/preprocess/: pipeline.py
src/recommender_ml/pipelines/preprocess_movies/: nodes.py  pipeline.py
src/recommender_ml/pipelines/preprocess_users/: nodes.py  pipeline.py
src/recommender_ml/pipelines/test/: nodes.py  pipeline.py
src/recommender_ml/pipelines/train/: nodes.py  pipeline.py
src/recommender_ml/pipelines/train_baseline/: nodes.py  pipeline.py
src/recommender_ml/pipelines/train_prod/: nodes.py  pipeline.py
tests/pipelines/preprocess/: test_pipeline.py
